--- a/app/frontend/templates/about.html
+++ b/app/frontend/templates/about.html
@@ -16,8 +16,8 @@
                 ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞
                 ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞</h2><br><br>
             <p>
-                Cette page vous présente le projet Récy&Co, son engagement pour l'éco-conception<br>
-                numérique, ainsi que les mentions légales et la politique de confidentialité<br>
+                Cette page vous présente le projet Récy&Co,<br> son engagement pour l'éco-conception
+                numérique,<br> ainsi que les mentions légales<br> et la politique de confidentialité
                 conformes au RGPD.
             </p>
         </div>
