--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -24,6 +24,7 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/auth_refresh.js') }}"></script>
     <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
 
     <!-- Scripts spécifiques aux pages -->
     {% block scripts %}{% endblock %}
