--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -24,7 +24,10 @@
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/auth_refresh.js') }}"></script>
     <script src="{{ url_for('static', filename='js/logout.js') }}"></script>
+
     <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
 
     <!-- Scripts spécifiques aux pages -->
     {% block scripts %}{% endblock %}
