🎨| texte: modification du paragraphe qui présente la page pour le responsive

--- a/app/frontend/templates/guide-tri.html
+++ b/app/frontend/templates/guide-tri.html
@@ -17,7 +17,7 @@
                 ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞</h2><br><br>
             <p>
                 Tu ne sais pas où jeter un déchet ? 🤔<br>
-                Tape son nom dans la barre de recherche : Récy te dira quelle poubelle utiliser et où le déposer ! 🦝♻️
+                Tape son nom dans la barre de recherche :<br> Récy te dira quelle poubelle utiliser<br> et où le déposer ! 🦝♻️
             </p>
         </div>
     </section>
