--- a/app/frontend/templates/jeu.html
+++ b/app/frontend/templates/jeu.html
@@ -18,7 +18,7 @@
             ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞</h2><br><br>
         <p>
             Jeu de tri : À toi de jouer !<br><br>
-            Aide Récy à trier les déchets. Fais glisser chaque objet vers sa poubelle<br> et découvre si tu as juste. Plus tu tries bien, plus tu marques de points ! 🏆
+            Aide Récy à trier les déchets.<br> Fais glisser chaque objet vers sa poubelle<br> et découvre si tu as juste. Plus tu tries bien,<br> plus tu marques de points ! 🏆
         </p>
     </div>
 </section>
