--- a/app/frontend/templates/profil.html
+++ b/app/frontend/templates/profil.html
@@ -16,7 +16,7 @@
 			<h2>Profil<br> ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞
 				͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞ ͞͞͞͞</h2><br><br>
 			<p>
-				Consulte tes scores, tes badges et continue à progresser avec Récy ! 🦝
+				Consulte tes scores, tes badges<br> et continue à progresser avec Récy ! 🦝
 			</p>
 		</div>
 	</section>
