💄| Ajout de l'icon récy

--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -10,6 +10,8 @@
 
     <!-- CSS spécifique selon la page -->
     {% block css %}{% endblock %}
+
+    <link rel="icon" href="{{ url_for('static', filename='icons/recy.svg') }}" type="image/svg">
 </head>
 <body>
 
